Progress on extracting sub-expressions

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
     <table class="tg">
       <tbody>
         <tr>
-          <td class="tg-0lax"><input type="button" class="operator-btn" value="("></td>
+          <td class="tg-0lax"><input type="button" class="operator-btn" value="(" disabled></td>
         </tr>
         <tr>
-          <td class="tg-0lax"><input type="button" class="operator-btn" value=")"></td>
+          <td class="tg-0lax"><input type="button" class="operator-btn" value=")" disabled></td>
         </tr>
         <tr>
           <td class="tg-0lax"><input type="button" class="operator-btn" value="^" disabled></td>
