Catered for exponential

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <td class="tg-0lax"><input type="button" class="operator-btn" value=")"></td>
         </tr>
         <tr>
-          <td class="tg-0lax"><input type="button" class="operator-btn" value="^" disabled></td>
+          <td class="tg-0lax"><input type="button" class="operator-btn" value="^"></td>
         </tr>
         <tr>
           <td class="tg-0lax"><input type="button" class="operator-btn" value="log" disabled></td>
