catering for exponentiation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <input type="text" name="" id="input-field">
     <input type="button" id="calculate-btn" value="=">
     <input type="button" id="clear-btn" value="Clear">
+    <input type="button" id="erase-btn" value="Erase">
   </div>
 
   <!-- Result area -->
@@ -50,7 +51,7 @@
           <td class="tg-0lax"><input type="button" class="keypad-btn" value="3"></td>
         </tr>
         <tr>
-          <td class="tg-0lax"></td>
+          <td class="tg-0lax"><input type="button" class="keypad-btn" value="-"></td>
           <td class="tg-0lax"><input type="button" class="keypad-btn" value="0"></td>
           <td class="tg-0lax"></td>
         </tr>
