Adding support for unitary operators

--- a/index.html
+++ b/index.html
@@ -92,13 +92,12 @@
           <td class="tg-0lax"><input type="button" class="operator-btn" value="^"></td>
         </tr>
         <tr>
-          <td class="tg-0lax"><input type="button" class="operator-btn" value="log" disabled></td>
+          <td class="tg-0lax"><input type="button" class="operator-btn" value="&#8730;"></td>
         </tr>
       </tbody>
     </table>
   </div>
 
-  <script type="module" src="./operations.mjs"></script>
   <script type="module" src="./calculator.mjs"></script>
   <script type="module" src="./script.mjs"></script>
 </body>
