remove unnecesary closing tags

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <!-- Keypad -->
     <section class="keypad">
       <input type="button" class="keypad-btn" value="7">
-      <input type="button" class="keypad-btn" value="8"></th>
-      <input type="button" class="keypad-btn" value="9"></th>
+      <input type="button" class="keypad-btn" value="8">
+      <input type="button" class="keypad-btn" value="9">
 
       <input type="button" class="keypad-btn" value="4">
       <input type="button" class="keypad-btn" value="5">
@@ -62,7 +62,7 @@
       <input type="button" class="operator-btn" value="^">
 
       <input type="button" class="operator-btn" value="&#247;">
-      <input type="button" class="operator-btn" value="log">
+      <input type="button" class="operator-btn" value="√">
     </section>
 
   </section>
