Changing MJS files to JS

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
   </section>
 
-  <script type="module" src="./calculator.mjs"></script>
-  <script type="module" src="./script.mjs"></script>
+  <script type="module" src="./calculator.js"></script>
+  <script type="module" src="./script.js"></script>
 </body>
 
 </html>
