Changed inputs to buttons

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <!-- Input area -->
   <section class="expression-area">
     <input type="text" class="expression-area-element" id="input-field">
-    <input type="button" class="expression-area-element" id="calculate-btn" value="=">
-    <input type="button" class="expression-area-element" id="clear-btn" value="Clear">
-    <input type="button" class="expression-area-element" id="erase-btn" value="Erase">
+    <button class="expression-area-element" id="calculate-btn" value="=">=</button>
+    <button class="expression-area-element" id="clear-btn" value="Clear">Clear</button>
+    <button class="expression-area-element" id="erase-btn" value="Erase">Erase</button>
   </section>
 
   <!-- Result area -->
@@ -33,36 +33,36 @@
 
     <!-- Keypad -->
     <section class="keypad">
-      <input type="button" class="keypad-btn" value="7">
-      <input type="button" class="keypad-btn" value="8">
-      <input type="button" class="keypad-btn" value="9">
+      <button class="keypad-btn" value="7">7</button>
+      <button class="keypad-btn" value="8">8</button>
+      <button class="keypad-btn" value="9">9</button>
 
-      <input type="button" class="keypad-btn" value="4">
-      <input type="button" class="keypad-btn" value="5">
-      <input type="button" class="keypad-btn" value="6">
+      <button class="keypad-btn" value="4">4</button>
+      <button class="keypad-btn" value="5">5</button>
+      <button class="keypad-btn" value="6">6</button>
 
-      <input type="button" class="keypad-btn" value="1">
-      <input type="button" class="keypad-btn" value="2">
-      <input type="button" class="keypad-btn" value="3">
+      <button class="keypad-btn" value="1">1</button>
+      <button class="keypad-btn" value="2">2</button>
+      <button class="keypad-btn" value="3">3</button>
 
-      <input type="button" class="keypad-btn" value="-">
-      <input type="button" class="keypad-btn" value="0">
-      <input type="button" class="keypad-btn" value=".">
+      <button class="keypad-btn" value="-">-</button>
+      <button class="keypad-btn" value="0">0</button>
+      <button class="keypad-btn" value=".">.</button>
     </section>
 
     <!-- Operator Pad -->
     <section class="operator-pad">
-      <input type="button" class="operator-btn" value="+">
-      <input type="button" class="operator-btn" value="(">
+      <button class="operator-btn" value="+">+</button>
+      <button class="operator-btn" value="(">(</button>
 
-      <input type="button" class="operator-btn" value="-">
-      <input type="button" class="operator-btn" value=")">
+      <button class="operator-btn" value="-">-</button>
+      <button class="operator-btn" value=")">)</button>
 
-      <input type="button" class="operator-btn" value="&times;">
-      <input type="button" class="operator-btn" value="^">
+      <button class="operator-btn" value="&times;">&times;</button>
+      <button class="operator-btn" value="^">^</button>
 
-      <input type="button" class="operator-btn" value="&#247;">
-      <input type="button" class="operator-btn" value="√">
+      <button class="operator-btn" value="&#247;">&#247;</button>
+      <button class="operator-btn" value="√">√</button>
     </section>
 
   </section>
