Moved decimal precision field position

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <button type="reset" class="expression-area-element" id="clear-btn" value="Clear">Clear</button>
     <button type="button" class="expression-area-element" id="erase-btn" value="Erase">Erase</button>
    
-    <fieldset>
+    <fieldset id="decimal-precision-fieldset">
       Decimal Precision: <input class="expression-area-element" id="decimal-precision" type="number" value="1" min="0" max="10">
     </fieldset>
     
