improvements to reactive layout

--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
     </form>
 
     <fieldset id="decimal-precision-fieldset">
-      <strong> Decimal Precision: </strong>
-      <input class="expression-area-element" id="decimal-precision" type="number" value="1" min="0" max="10">
+      Decimal Precision:
+      <input id="decimal-precision" type="number" value="1" min="0" max="10">
     </fieldset>
-<!-- 
+
     <fieldset id="input-pad-selection-fieldset">
-      <input type="checkbox" id="switch" class="checkbox" />
-      Basic <br /> brKeypad
-      <label for="switch" class="toggle">
+      <p class="input-pad-selection-element"> Keypad </p>
+
+      <input type="checkbox" id="switch" class="checkbox input-pad-selection-element" />
+      <label for="switch" id="switch" class="toggle input-pad-selection-element">
       </label>
-      Advanced <br /> Operators
-      <section class="keypad">
-    </fieldset> -->
+
+      <p class="input-pad-selection-element"> Operators </p> 
+    </fieldset>
 
 
     <section class="keypad">
