changes expression area to a readonly text area

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
 
     <section class="calculator-screen">
-      <var id="expression"></var>
+      <textarea id="expression" readonly></textarea>
 
       <var var id="result"></var>
 
