Added operator keypad for smaller displays

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </fieldset>
 
 
-    <section class="keypad">
+    <section id="numerical-keypad" class="keypad">
       <button class="keypad-btn" value="7">7</button>
       <button class="keypad-btn" value="8">8</button>
       <button class="keypad-btn" value="9">9</button>
@@ -77,6 +77,36 @@
       <button type="button" id="calculate-btn" value="=">=</button>
 
     </section>
+<!-- 
+    <section id="operator-pad" class="keypad">
+      <button class="operator-btn" value="^">^</button>
+      <button class="operator-btn" value="log" disabled>log</button>
+      <button class="keypad-btn" value="&#x3C0;" disabled>&#x3C0;</button>
+      <button class="operator-btn" value="sin" disabled>sin</button>
+      <button class="operator-btn" value="?" disabled>sin<sup>-1</sup></button>
+
+
+      <button class="operator-btn" value="^ 2"><var>x<sup>2</sup></var></button>
+      <button class="operator-btn" value="?" disabled>log<sub>10</sub></button>
+      <button class="keypad-btn" value="e" disabled><var>e</var></button>
+      <button class="operator-btn" value="cos" disabled>cos</button>
+      <button class="operator-btn" value="?" disabled>cos<sup>-1</sup></button>
+
+
+
+      <button class="operator-btn" value="√">√</button>
+      <button class="operator-btn" value="ln" disabled>ln</button>
+      <button class="keypad-btn" value="i" disabled><var>i</var></button>
+      <button class="operator-btn" value="tan" disabled>tan</button>
+      <button class="operator-btn" value="?" disabled>tan<sup>-1</sup></button>
+
+
+      <button class="operator-btn" value="E" disabled>10<sup><sup>x</sup></button>
+      <button class="operator-btn" value="!" disabled><var>n!</var></button>
+      <button class="keypad-btn" value="&gamma;"  disabled>&gamma;</button>
+      <button type="button" id="calculate-btn" value="=">=</button>
+
+    </section> -->
 
     <script type="module" src="./script.js"></script>
   </main>
