--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <button type="button" id="calculate-btn" value="=">=</button>
 
     </section>
-<!-- 
+
     <section id="operator-pad" class="keypad">
       <button class="operator-btn" value="^">^</button>
       <button class="operator-btn" value="log" disabled>log</button>
@@ -86,7 +86,7 @@
       <button class="operator-btn" value="?" disabled>sin<sup>-1</sup></button>
 
 
-      <button class="operator-btn" value="^ 2"><var>x<sup>2</sup></var></button>
+      <button class="operator-btn" value="^ 2" disabled><var>x<sup>2</sup></var></button>
       <button class="operator-btn" value="?" disabled>log<sub>10</sub></button>
       <button class="keypad-btn" value="e" disabled><var>e</var></button>
       <button class="operator-btn" value="cos" disabled>cos</button>
@@ -106,7 +106,7 @@
       <button class="keypad-btn" value="&gamma;"  disabled>&gamma;</button>
       <button type="button" id="calculate-btn" value="=">=</button>
 
-    </section> -->
+    </section>
 
     <script type="module" src="./script.js"></script>
   </main>
