replaced var display with text input area

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
     <section class="calculator-screen">
       <textarea id="expression" readonly></textarea>
-
-      <var var id="result"></var>
-
+      <input type="number" id="result" readonly>
     </section>
+
+  
     <!-- Expression area -->
     <form class="expression-control-area">
 
