Catered for special non-numerical keys

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
       <button class="keypad-btn four-btn" value="4">4</button>
       <button class="keypad-btn five-btn" value="5">5</button>
       <button class="keypad-btn six-btn" value="6">6</button>
-      <button class="operator-btn" value="&times;">&times;</button>
-      <button class="operator-btn" value="&#247;">&#247;</button>
+      <button class="operator-btn multiply-btn" value="&times;">&times;</button>
+      <button class="operator-btn divide-btn" value="&#247;">&#247;</button>
 
 
 
       <button class="keypad-btn one-btn" value="1">1</button>
       <button class="keypad-btn two-btn" value="2">2</button>
       <button class="keypad-btn three-btn" value="3">3</button>
-      <button class="operator-btn" value="+">+</button>
-      <button class="operator-btn" value="-">-</button>
+      <button class="operator-btn plus-btn" value="+">+</button>
+      <button class="operator-btn minus-btn" value="-">-</button>
 
 
       <button class="keypad-btn" value="-">NEG</button>
@@ -145,16 +145,16 @@
       <button class="keypad-btn four-btn" value="4">4</button>
       <button class="keypad-btn five-btn" value="5">5</button>
       <button class="keypad-btn six-btn" value="6">6</button>
-      <button class="operator-btn" value="&times;">&times;</button>
-      <button class="operator-btn" value="&#247;">&#247;</button>
+      <button class="operator-btn multiply-btn" value="&times;">&times;</button>
+      <button class="operator-btn divide-btn" value="&#247;">&#247;</button>
 
 
 
       <button class="keypad-btn one-btn" value="1">1</button>
       <button class="keypad-btn two-btn" value="2">2</button>
       <button class="keypad-btn three-btn" value="3">3</button>
-      <button class="operator-btn" value="+">+</button>
-      <button class="operator-btn" value="-">-</button>
+      <button class="operator-btn plus-btn" value="+">+</button>
+      <button class="operator-btn minus-btn" value="-">-</button>
 
 
       <button class="keypad-btn" value="-">NEG</button>
