Added modal for displaying errors

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
       Calculator
     </strong>
   </nav>
+ 
+  <!-- Message modal  -->
+  <dialog id="message-modal">
+    <h1 id="modal-heading"></h1>
+    <p id="modal-text"></p>
+    <form method="dialog">
+      <button id="close-modal">Close</button>
+    </form>
+  </dialog>
 
   <main>
 
